--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <li><a href="#product">產品中心</a></li>
                                 <li><a href="#recruiting">加入團隊</a></li>
                                 <li><a href="#about-aig">關於AIG</a></li>
-                                <li class="last"><a class="btn btn-orange contact-us-pop-link animation-btn" href="#">聯繫我們</a></li>
+                                <li class="last"><a class="btn btn-orange animation-btn" data-toggle="modal" data-target="#myModal">聯繫我們</a></li>
                             </ul>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                         <div class="col-xs-3">
                             <div class="logo"> <a href="#"><img src="images/AIG-Ch-Logo.png"></a> </div>
                         </div>
-                        <div class="col-xs-6 ac"> <a class="btn btn-orange-t contact-us-pop-link" href="#">聯繫我們</a> </div>
+                        <div class="col-xs-6 ac"> <a class="btn btn-orange-t" data-toggle="modal" data-target="#myModal">聯繫我們</a> </div>
                         <div class="col-xs-3 ar">
                             <div class="hamburger-menu navbar-link">
                                 <div class="bar"></div>
@@ -631,7 +631,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-12 ac"> <a target="_blank" class="btn btn-orange" href="#">立即申請</a> </div>
+                        <div class="col-xs-12 ac"> <a target="_blank" class="btn btn-orange" data-toggle="modal" data-target="#myModal">立即申請</a> </div>
                     </div>
                 </div>
             </div>
@@ -945,6 +945,24 @@
                 </div>
             </div>
         </footer>
+    </div>
+    <!--      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>-->
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header" style="border-bottom: 0">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/zqswkcn0v436lu/">
+                          
+                        </iframe>
+            </div>
+
+        </div>
     </div>
     <div id="video-pop" class="pop-wrap popup-pop">
         <div class="pop-wrap-bg"></div>
