--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="home-banner" style="background-image:url(images/banner.png)">
                 <div class="container-fluid">
                     <div class="row banner-form-row" style="margin: 50px 0 50px 0;">
-                        <div class="col-xs-12 col-sm-6" style="padding: 0 25px 0 80px;">
+                        <div class="col-xs-12 col-md-6" style="padding: 0 25px 0 80px;">
                             <div id="wufoo-x1ve0mqt0icorfb" style="margin-left: -50px;">
                                 <a href="https://aigchinese.wufoo.com/forms/x1ve0mqt0icorfb"></a>.
                             </div>
