--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <li><a href="#product">產品中心</a></li>
                                 <li><a href="#recruiting">加入團隊</a></li>
                                 <li><a href="#about-aig">關於AIG</a></li>
-                                <li class="last"><a class="btn btn-orange animation-btn" data-toggle="modal" data-target="#myModal">聯繫我們</a></li>
+                                <li class="last"><a class="btn btn-orange animation-btn" data-toggle="modal" data-target="#contact-us-modal">聯繫我們</a></li>
                             </ul>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                         <div class="col-xs-3">
                             <div class="logo"> <a href="#"><img src="images/AIG-Ch-Logo.png"></a> </div>
                         </div>
-                        <div class="col-xs-6 ac"> <a class="btn btn-orange-t" data-toggle="modal" data-target="#myModal">聯繫我們</a> </div>
+                        <div class="col-xs-6 ac"> <a class="btn btn-orange-t" data-toggle="modal" data-target="#contact-us-modal">聯繫我們</a> </div>
                         <div class="col-xs-3 ar">
                             <div class="hamburger-menu navbar-link">
                                 <div class="bar"></div>
@@ -631,7 +631,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-12 ac"> <a target="_blank" class="btn btn-orange" data-toggle="modal" data-target="#myModal">立即申請</a> </div>
+                        <div class="col-xs-12 ac"> <a target="_blank" class="btn btn-orange" data-toggle="modal" data-target="#join-us-modal">立即申請</a> </div>
                     </div>
                 </div>
             </div>
@@ -865,55 +865,57 @@
                 </div>
             </div>
             <div>
-                <div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-                            <div id="wufoo-p221x8l17q55oz">
-                                Fill out my <a href="https://aigchinese.wufoo.com/forms/p221x8l17q55oz">online form</a>.
-                            </div>
-                            <script type="text/javascript">
-                                var p221x8l17q55oz;
-                                (function(d, t) {
-                                    var s = d.createElement(t),
-                                        options = {
-                                            'userName': 'aigchinese',
-                                            'formHash': 'p221x8l17q55oz',
-                                            'autoResize': true,
-                                            'height': '541',
-                                            'async': true,
-                                            'host': 'wufoo.com',
-                                            'header': 'show',
-                                            'ssl': true
+                <div class="container">
+                    <div>
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+                                <div id="wufoo-p221x8l17q55oz">
+                                    Fill out my <a href="https://aigchinese.wufoo.com/forms/p221x8l17q55oz">online form</a>.
+                                </div>
+                                <script type="text/javascript">
+                                    var p221x8l17q55oz;
+                                    (function(d, t) {
+                                        var s = d.createElement(t),
+                                            options = {
+                                                'userName': 'aigchinese',
+                                                'formHash': 'p221x8l17q55oz',
+                                                'autoResize': true,
+                                                'height': '541',
+                                                'async': true,
+                                                'host': 'wufoo.com',
+                                                'header': 'show',
+                                                'ssl': true
+                                            };
+                                        s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+                                        s.onload = s.onreadystatechange = function() {
+                                            var rs = this.readyState;
+                                            if (rs)
+                                                if (rs != 'complete')
+                                                    if (rs != 'loaded') return;
+                                            try {
+                                                p221x8l17q55oz = new WufooForm();
+                                                p221x8l17q55oz.initialize(options);
+                                                p221x8l17q55oz.display();
+                                            } catch (e) {}
                                         };
-                                    s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-                                    s.onload = s.onreadystatechange = function() {
-                                        var rs = this.readyState;
-                                        if (rs)
-                                            if (rs != 'complete')
-                                                if (rs != 'loaded') return;
-                                        try {
-                                            p221x8l17q55oz = new WufooForm();
-                                            p221x8l17q55oz.initialize(options);
-                                            p221x8l17q55oz.display();
-                                        } catch (e) {}
-                                    };
-                                    var scr = d.getElementsByTagName(t)[0],
-                                        par = scr.parentNode;
-                                    par.insertBefore(s, scr);
-                                })(document, 'script');
-                            </script>
+                                        var scr = d.getElementsByTagName(t)[0],
+                                            par = scr.parentNode;
+                                        par.insertBefore(s, scr);
+                                    })(document, 'script');
+                                </script>
 
 
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div style="padding: 20px 0 80px 0">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-                            <p>注意：本表單使用 SSL 安全技術將您透過本表單所提交的資料加密。雖然您的瀏覽器可能不會顯示指定的安全符號，但如果您在表單上點擊滑鼠右鍵並檢視其屬性，您將會看到本表單實際上有使用安全技術加密。我們的電子郵件回覆可能並未加密或並非完全安全。如有其他人或其他機構能夠登入您的電子郵件或電腦，其亦可能登入您的電子郵件來回覆。</p>
-                            <p>如果您點擊「提交」按鈕或透過任何其他方式提交本電子表單，您在此授權我們以電子郵件回覆您的問題。</p>
-                            <p>使用者確認並同意，透過本電子郵件功能向 American General Life Insurance Company 提供任何個人或保密的使用者信息，即代表使用者同意透過公共網路和電子郵件傳輸（包括寄送和回覆）此類個人或保密的使用者信息，且使用者瞭解這些資訊可能會遭到其他方的檢視。使用者同意遵守可能由 American General Life Insurance Company 所制定的程序，以加強透過網路傳輸個人資料的安全性和保密性。</p>
-                            <p>請檢閱我們的隱私通知，其說明了我們對此網站所收集到個人資訊的處理方式。</p>
+                    <div style="padding: 20px 0 80px 0">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+                                <p>注意：本表單使用 SSL 安全技術將您透過本表單所提交的資料加密。雖然您的瀏覽器可能不會顯示指定的安全符號，但如果您在表單上點擊滑鼠右鍵並檢視其屬性，您將會看到本表單實際上有使用安全技術加密。我們的電子郵件回覆可能並未加密或並非完全安全。如有其他人或其他機構能夠登入您的電子郵件或電腦，其亦可能登入您的電子郵件來回覆。</p>
+                                <p>如果您點擊「提交」按鈕或透過任何其他方式提交本電子表單，您在此授權我們以電子郵件回覆您的問題。</p>
+                                <p>使用者確認並同意，透過本電子郵件功能向 American General Life Insurance Company 提供任何個人或保密的使用者信息，即代表使用者同意透過公共網路和電子郵件傳輸（包括寄送和回覆）此類個人或保密的使用者信息，且使用者瞭解這些資訊可能會遭到其他方的檢視。使用者同意遵守可能由 American General Life Insurance Company 所制定的程序，以加強透過網路傳輸個人資料的安全性和保密性。</p>
+                                <p>請檢閱我們的隱私通知，其說明了我們對此網站所收集到個人資訊的處理方式。</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -944,12 +946,13 @@
                     </div>
                 </div>
             </div>
+
         </footer>
     </div>
     <!--      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>-->
 
     <!-- Modal -->
-    <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal fade" id="contact-us-modal" role="dialog">
         <div class="modal-dialog">
 
             <!-- Modal content-->
@@ -958,6 +961,21 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/zqswkcn0v436lu/">
+                          
+                        </iframe>
+            </div>
+
+        </div>
+    </div>
+    <div class="modal fade" id="join-us-modal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header" style="border-bottom: 0">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/m1g1wuul0tojv0t/">
                           
                         </iframe>
             </div>
