--- a/index.uncompressed.html
+++ b/index.uncompressed.html
@@ -957,7 +957,42 @@
                 <div class="modal-header" style="border-bottom: 0">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/zqswkcn0v436lu/"></iframe>
+                <!--                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/zqswkcn0v436lu/"></iframe>-->
+                <div id="wufoo-zqswkcn0v436lu">
+                    Fill out my <a href="https://aigchinese.wufoo.com/forms/zqswkcn0v436lu">online form</a>.
+                </div>
+                <script type="text/javascript">
+                    var zqswkcn0v436lu;
+                    (function(d, t) {
+                        var s = d.createElement(t),
+                            options = {
+                                'userName': 'aigchinese',
+                                'formHash': 'zqswkcn0v436lu',
+                                'autoResize': true,
+                                'height': '1290',
+                                'async': true,
+                                'host': 'wufoo.com',
+                                'header': 'show',
+                                'ssl': true
+                            };
+                        s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+                        s.onload = s.onreadystatechange = function() {
+                            var rs = this.readyState;
+                            if (rs)
+                                if (rs != 'complete')
+                                    if (rs != 'loaded') return;
+                            try {
+                                zqswkcn0v436lu = new WufooForm();
+                                zqswkcn0v436lu.initialize(options);
+                                zqswkcn0v436lu.display();
+                            } catch (e) {}
+                        };
+                        var scr = d.getElementsByTagName(t)[0],
+                            par = scr.parentNode;
+                        par.insertBefore(s, scr);
+                    })(document, 'script');
+                </script>
+
             </div>
 
         </div>
@@ -968,9 +1003,43 @@
                 <div class="modal-header" style="border-bottom: 0">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/m1g1wuul0tojv0t/"></iframe>
-            </div>
+                <!--                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/m1g1wuul0tojv0t/"></iframe>-->
+                <div id="wufoo-m1g1wuul0tojv0t">
+                    Fill out my <a href="https://aigchinese.wufoo.com/forms/m1g1wuul0tojv0t">online form</a>.
+                </div>
+                <script type="text/javascript">
+                    var m1g1wuul0tojv0t;
+                    (function(d, t) {
+                        var s = d.createElement(t),
+                            options = {
+                                'userName': 'aigchinese',
+                                'formHash': 'm1g1wuul0tojv0t',
+                                'autoResize': true,
+                                'height': '779',
+                                'async': true,
+                                'host': 'wufoo.com',
+                                'header': 'show',
+                                'ssl': true
+                            };
+                        s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+                        s.onload = s.onreadystatechange = function() {
+                            var rs = this.readyState;
+                            if (rs)
+                                if (rs != 'complete')
+                                    if (rs != 'loaded') return;
+                            try {
+                                m1g1wuul0tojv0t = new WufooForm();
+                                m1g1wuul0tojv0t.initialize(options);
+                                m1g1wuul0tojv0t.display();
+                            } catch (e) {}
+                        };
+                        var scr = d.getElementsByTagName(t)[0],
+                            par = scr.parentNode;
+                        par.insertBefore(s, scr);
+                    })(document, 'script');
+                </script>
 
+            </div>
         </div>
     </div>
     <div id="video-pop" class="pop-wrap popup-pop">
