--- a/index.html
+++ b/index.html
@@ -957,7 +957,8 @@
                 <div class="modal-header" style="border-bottom: 0">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <!--                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/zqswkcn0v436lu/"></iframe>-->
+                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/zqswkcn0v436lu/"></iframe>
+                <!--
                 <div id="wufoo-zqswkcn0v436lu">
                     Fill out my <a href="https://aigchinese.wufoo.com/forms/zqswkcn0v436lu">online form</a>.
                 </div>
@@ -992,6 +993,7 @@
                         par.insertBefore(s, scr);
                     })(document, 'script');
                 </script>
+-->
 
             </div>
 
@@ -1003,10 +1005,12 @@
                 <div class="modal-header" style="border-bottom: 0">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <!--                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/m1g1wuul0tojv0t/"></iframe>-->
+                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/m1g1wuul0tojv0t/"></iframe>
+                <!--
                 <div id="wufoo-m1g1wuul0tojv0t">
                     Fill out my <a href="https://aigchinese.wufoo.com/forms/m1g1wuul0tojv0t">online form</a>.
                 </div>
+                
                 <script type="text/javascript">
                     var m1g1wuul0tojv0t;
                     (function(d, t) {
@@ -1038,6 +1042,8 @@
                         par.insertBefore(s, scr);
                     })(document, 'script');
                 </script>
+-->
+
 
             </div>
         </div>
