--- a/index.html
+++ b/index.html
@@ -1005,8 +1005,8 @@
                 <div class="modal-header" style="border-bottom: 0">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/m1g1wuul0tojv0t/"></iframe>
-                <!--
+<!--                <iframe height="1090" allowTransparency="true" frameborder="0" style="width:100%;border:none" src="https://aigchinese.wufoo.com/embed/m1g1wuul0tojv0t/"></iframe>-->
+                
                 <div id="wufoo-m1g1wuul0tojv0t">
                     Fill out my <a href="https://aigchinese.wufoo.com/forms/m1g1wuul0tojv0t">online form</a>.
                 </div>
@@ -1042,7 +1042,7 @@
                         par.insertBefore(s, scr);
                     })(document, 'script');
                 </script>
--->
+
 
 
             </div>
