--- a/index.html
+++ b/index.html
@@ -869,19 +869,19 @@
                 <div class="container">
                     <div>
                         <div class="row">
-                            <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-                                <div id="wufoo-p221x8l17q55oz">
-                                    Fill out my <a href="https://aigchinese.wufoo.com/forms/p221x8l17q55oz">online form</a>.
+                            <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+                                <div id="wufoo-krwbqbo0veeut8">
+                                    Fill out my <a href="https://aigchinese.wufoo.com/forms/krwbqbo0veeut8">online form</a>.
                                 </div>
                                 <script type="text/javascript">
-                                    var p221x8l17q55oz;
+                                    var krwbqbo0veeut8;
                                     (function(d, t) {
                                         var s = d.createElement(t),
                                             options = {
                                                 'userName': 'aigchinese',
-                                                'formHash': 'p221x8l17q55oz',
+                                                'formHash': 'krwbqbo0veeut8',
                                                 'autoResize': true,
-                                                'height': '541',
+                                                'height': '779',
                                                 'async': true,
                                                 'host': 'wufoo.com',
                                                 'header': 'show',
@@ -894,9 +894,9 @@
                                                 if (rs != 'complete')
                                                     if (rs != 'loaded') return;
                                             try {
-                                                p221x8l17q55oz = new WufooForm();
-                                                p221x8l17q55oz.initialize(options);
-                                                p221x8l17q55oz.display();
+                                                krwbqbo0veeut8 = new WufooForm();
+                                                krwbqbo0veeut8.initialize(options);
+                                                krwbqbo0veeut8.display();
                                             } catch (e) {}
                                         };
                                         var scr = d.getElementsByTagName(t)[0],
@@ -905,27 +905,6 @@
                                     })(document, 'script');
                                 </script>
 
-
-                            </div>
-                        </div>
-                    </div>
-                    <style>
-                        .disclaimer-bot p{
-                            margin-top: 25px;
-                            font-size: 11.05px;
-                            font-style: normal;
-                            font-weight: 400;
-                        }
-                    </style>
-                    <div class="disclaimer-bot" style="padding: 20px 0 80px 0">
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-                                <p>注意：本表單使用 SSL 安全技術將您透過本表單所提交的資料加密。雖然您的瀏覽器可能不會顯示指定的安全符號，但如果您在表單上點擊滑鼠右鍵並檢視其屬性，您將會看到本表單實際上有使用安全技術加密。我們的電子郵件回覆可能並未加密或並非完全安全。如有其他人或其他機構能夠登入您的電子郵件或電腦，其亦可能登入您的電子郵件來回覆。</p>
-                                <p>如果您點擊「提交」按鈕或透過任何其他方式提交本電子表單，您在此授權我們以電子郵件回覆您的問題。</p>
-
-                                <p>使用者確認並同意，透過本電子郵件功能向 American General Life Insurance Company 提供任何個人或保密的使用者信息，即代表使用者同意透過公共網路和電子郵件傳輸（包括寄送和回覆）此類個人或保密的使用者信息，且使用者瞭解這些資訊可能會遭到其他方的檢視。使用者同意遵守可能由 American General Life Insurance Company 所制定的程序，以加強透過網路傳輸個人資料的安全性和保密性。</p>
-
-                                <p>請檢閱我們的隱私通知，其說明了我們對此網站所收集到個人資訊的處理方式。</p>
                             </div>
                         </div>
                     </div>
