--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
                 <div class="container">
                     <div>
                         <div class="row">
-                            <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+                            <div class="col-xs-12 col-sm-8 col-sm-offset-2" style="margin-bottom: 20px;">
                                 <div id="wufoo-krwbqbo0veeut8">
                                     Fill out my <a href="https://aigchinese.wufoo.com/forms/krwbqbo0veeut8">online form</a>.
                                 </div>
