--- a/index.html
+++ b/index.html
@@ -40,13 +40,6 @@
 </head>
 
 <body>
-    <div class="landscape-show ac">
-        <div class="div-table">
-            <div class="table-cell"> <img src="images/portrait.png">
-                <p>Best viewed in portrait mode.</p>
-            </div>
-        </div>
-    </div>
     <div class="mob-navbar-pop">
         <div class="mob-navbar-pop-main">
             <div class="mob-navbar">
@@ -631,8 +624,13 @@
                             </div>
                         </div>
                     </div>
+<!--
                     <div class="row">
                         <div class="col-xs-12 ac"> <a target="_blank" class="btn btn-orange" data-toggle="modal" data-target="#join-us-modal">立即申請</a> </div>
+                    </div>
+-->
+                                        <div class="row">
+                        <div class="col-xs-12 ac"> <a href="https://aigchinese.wufoo.com/embed/m1g1wuul0tojv0t/" class="btn btn-orange">立即申請</a> </div>
                     </div>
                 </div>
             </div>
