change bg img for sc and button color

--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                                     </div>
                                     <div class="address-info-tabs-box">
                                         <div class="row">
-                                            <div class="col-xs-12 col-lg-6"> <img src="images/PASADENA_@2x.jpg"> </div>
+                                            <div class="col-xs-12 col-lg-6"> <img src="images/south_cal.jpeg"> </div>
                                             <div class="col-xs-12 col-lg-6">
                                                 <div class="row">
                                                     <div class="col-xs-12 col-sm-6">
@@ -790,7 +790,7 @@
                             </div>
                             <div class="child-box">
                                 <div class="row">
-                                    <div class="col-xs-12 col-lg-6"> <img src="images/PASADENA_@2x.jpg"> </div>
+                                    <div class="col-xs-12 col-lg-6"> <img src="images/south_cal.jpeg"> </div>
                                     <div class="col-xs-12 col-lg-6">
                                         <div class="row">
                                             <div class="col-xs-12 col-sm-6">
