--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </style>
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
-    <link href="includes/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="includes/css/animate.css" rel="stylesheet" type="text/css" />
-    <link href="includes/css/swiper.min.css" rel="stylesheet" type="text/css" />
-    <link href="includes/css/global.css" rel="stylesheet" type="text/css" />
+    <link href="_includes/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="_includes/css/animate.css" rel="stylesheet" type="text/css" />
+    <link href="_includes/css/swiper.min.css" rel="stylesheet" type="text/css" />
+    <link href="_includes/css/global.css" rel="stylesheet" type="text/css" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -35,8 +35,8 @@
     <script src="bootstrap/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="includes/js/swiper.min.js"></script>
-    <script type="text/javascript" src="includes/js/main-jquery.js"></script>
+    <script type="text/javascript" src="_includes/js/swiper.min.js"></script>
+    <script type="text/javascript" src="_includes/js/main-jquery.js"></script>
 </head>
 
 <body>
@@ -63,7 +63,7 @@
                 <div class="pc-menu">
                     <div class="row">
                         <div class="col-xs-12 col-sm-2 col-sm-offset-1">
-                            <div class="logo"> <a href="#"><img src="images/AIG-Ch-Logo.png"></a> </div>
+                            <div class="logo"> <a href="#"><img src="_images/AIG-Ch-Logo.png"></a> </div>
                         </div>
                         <div class="col-xs-12 col-sm-8 ar">
                             <ul class="pc-menu-list">
@@ -80,7 +80,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-xs-3">
-                            <div class="logo"> <a href="#"><img src="images/AIG-Ch-Logo.png"></a> </div>
+                            <div class="logo"> <a href="#"><img src="_images/AIG-Ch-Logo.png"></a> </div>
                         </div>
                         <div class="col-xs-6 ac"> <a class="btn btn-orange-t" data-toggle="modal" data-target="#contact-us-modal">聯繫我們</a> </div>
                         <div class="col-xs-3 ar">
@@ -93,7 +93,7 @@
             </div>
         </header>
         <section class="content">
-            <div class="home-banner" style="background-image:url(images/banner.png)">
+            <div class="home-banner" style="background-image:url(_images/banner.png)">
                 <div class="container-fluid">
                     <div class="row banner-form-row" style="margin: 50px 0 50px 0;">
                         <div class="col-xs-12 col-md-6" style="padding: 0 25px 0 80px;">
@@ -153,7 +153,7 @@
                                                         <a class="btn btn-w-t video-pop-link" data-src="https://link.videoplatform.limelight.com/media/?mediaId=a338e4b9bd45428196e582831305964c&width=100%&height=100%&playerForm=bee80682a9294bdbbd941e6c0814c706&embedMode=html&htmlPlayerFilename=limelightjs-player.js" href="#">播放 <i class="fa fa-play"></i></a> </div>
                                                 </div>
                                             </div>
-                                            <img src="images/video-01.jpg"> </div>
+                                            <img src="_images/video-01.jpg"> </div>
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-4">
                                         <div class="home-video-box">
@@ -164,7 +164,7 @@
                                                         <a class="btn btn-w-t video-pop-link" data-src="https://link.videoplatform.limelight.com/media/?mediaId=a02db5c332ce47fbb4d855ab03c0b9ab&width=100%&height=100%&playerForm=Player&embedMode=html&htmlPlayerFilename=limelightjs-player.js" href="#">播放 <i class="fa fa-play"></i></a> </div>
                                                 </div>
                                             </div>
-                                            <img src="images/video-02.jpg"> </div>
+                                            <img src="_images/video-02.jpg"> </div>
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-4">
                                         <div class="home-video-box">
@@ -175,7 +175,7 @@
                                                         <a class="btn btn-w-t video-pop-link" data-src="https://link.videoplatform.limelight.com/media/?mediaId=4adfa9c9eb7c4176a9332fa46e0178e6&width=100%&height=100%&playerForm=Player&embedMode=html&htmlPlayerFilename=limelightjs-player.js" href="#">播放 <i class="fa fa-play"></i></a> </div>
                                                 </div>
                                             </div>
-                                            <img src="images/video-03.jpg"> </div>
+                                            <img src="_images/video-03.jpg"> </div>
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-4">
                                         <div class="home-video-box">
@@ -186,7 +186,7 @@
                                                         <a class="btn btn-w-t video-pop-link" data-src="https://link.videoplatform.limelight.com/media/?mediaId=90b8ab3bf3ca4059b66ef75f1f648451&width=100%&height=100%&playerForm=Player&embedMode=html&htmlPlayerFilename=limelightjs-player.js" href="#">播放 <i class="fa fa-play"></i></a> </div>
                                                 </div>
                                             </div>
-                                            <img src="images/video-04.jpg"> </div>
+                                            <img src="_images/video-04.jpg"> </div>
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-4">
                                         <div class="home-video-box">
@@ -197,7 +197,7 @@
                                                         <a class="btn btn-w-t video-pop-link" data-src="https://link.videoplatform.limelight.com/media/?mediaId=64156166a0c94509b042fc59780730d2&width=100%&height=100%&playerForm=bee80682a9294bdbbd941e6c0814c706&embedMode=html&htmlPlayerFilename=limelightjs-player.js" href="#">播放 <i class="fa fa-play"></i></a> </div>
                                                 </div>
                                             </div>
-                                            <img src="images/video-05.jpg"> </div>
+                                            <img src="_images/video-05.jpg"> </div>
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-4">
                                         <div class="home-video-box">
@@ -208,7 +208,7 @@
                                                         <a class="btn btn-w-t video-pop-link" data-src="https://link.videoplatform.limelight.com/media/?mediaId=837b39c8af144872b2791585a5e83a1b&width=100%&height=100%&playerForm=bee80682a9294bdbbd941e6c0814c706&embedMode=html&htmlPlayerFilename=limelightjs-player.js" href="#">播放 <i class="fa fa-play"></i></a> </div>
                                                 </div>
                                             </div>
-                                            <img src="images/video-06.jpg"> </div>
+                                            <img src="_images/video-06.jpg"> </div>
                                     </div>
                                 </div>
                             </div>
@@ -236,7 +236,7 @@
                                     <div class="col-xs-12 col-sm-4">
                                         <div class="section-02-box">
                                             <div class="row">
-                                                <div class="col-xs-6 col-sm-12"> <img src="images/chronic@2x.png"> </div>
+                                                <div class="col-xs-6 col-sm-12"> <img src="_images/chronic@2x.png"> </div>
                                                 <div class="col-xs-6 col-sm-12">
                                                     <h3>慢性疾病預支賠償金</h3>
                                                 </div>
@@ -246,7 +246,7 @@
                                     <div class="col-xs-12 col-sm-4">
                                         <div class="section-02-box">
                                             <div class="row">
-                                                <div class="col-xs-6 col-sm-12"> <img src="images/critical@2x.png"> </div>
+                                                <div class="col-xs-6 col-sm-12"> <img src="_images/critical@2x.png"> </div>
                                                 <div class="col-xs-6 col-sm-12">
                                                     <h3>危疾預支賠償金</h3>
                                                 </div>
@@ -256,7 +256,7 @@
                                     <div class="col-xs-12 col-sm-4">
                                         <div class="section-02-box">
                                             <div class="row">
-                                                <div class="col-xs-6 col-sm-12"> <img src="images/terminal@2x.png"> </div>
+                                                <div class="col-xs-6 col-sm-12"> <img src="_images/terminal@2x.png"> </div>
                                                 <div class="col-xs-6 col-sm-12">
                                                     <h3>末期疾病預支賠償金</h3>
                                                 </div>
@@ -649,7 +649,7 @@
                     <!--
                     <div class="row">
                         <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-6 col-lg-offset-3 ac">
-                            <div class="usa-map"> <span class="address-d address-d-1 active"></span> <span class="address-d address-d-2"></span> <span class="address-d address-d-3"></span> <span class="address-d address-d-4"></span> <span class="address-d address-d-5"></span> <img src="images/usa-map.png"> </div>
+                            <div class="usa-map"> <span class="address-d address-d-1 active"></span> <span class="address-d address-d-2"></span> <span class="address-d address-d-3"></span> <span class="address-d address-d-4"></span> <span class="address-d address-d-5"></span> <img src="_images/usa-map.png"> </div>
                         </div>
                     </div>
 -->
@@ -680,7 +680,7 @@
                                 <div class="address-info-tabs-main">
                                     <div class="address-info-tabs-box" style="display:block;">
                                         <div class="row">
-                                            <div class="col-xs-12 col-lg-6"> <img src="images/SF_@2x.jpg"> </div>
+                                            <div class="col-xs-12 col-lg-6"> <img src="_images/SF_@2x.jpg"> </div>
                                             <div class="col-xs-12 col-lg-6">
                                                 <div class="row">
                                                     <div class="col-xs-12 col-sm-6">
@@ -698,7 +698,7 @@
                                     </div>
                                     <div class="address-info-tabs-box">
                                         <div class="row">
-                                            <div class="col-xs-12 col-lg-6"> <img src="images/south_cal.jpeg"> </div>
+                                            <div class="col-xs-12 col-lg-6"> <img src="_images/south_cal.jpeg"> </div>
                                             <div class="col-xs-12 col-lg-6">
                                                 <div class="row">
                                                     <div class="col-xs-12 col-sm-6">
@@ -712,7 +712,7 @@
                                     </div>
                                     <div class="address-info-tabs-box">
                                         <div class="row">
-                                            <div class="col-xs-12 col-lg-6"> <img src="images/HOUSTIN_@2x.jpg"> </div>
+                                            <div class="col-xs-12 col-lg-6"> <img src="_images/HOUSTIN_@2x.jpg"> </div>
                                             <div class="col-xs-12 col-lg-6">
                                                 <div class="row">
                                                     <div class="col-xs-12 col-sm-6">
@@ -726,7 +726,7 @@
                                     </div>
                                     <div class="address-info-tabs-box">
                                         <div class="row">
-                                            <div class="col-xs-12 col-lg-6"> <img src="images/DC_@2x.jpg"> </div>
+                                            <div class="col-xs-12 col-lg-6"> <img src="_images/DC_@2x.jpg"> </div>
                                             <div class="col-xs-12 col-lg-6">
                                                 <div class="row">
                                                     <div class="col-xs-12 col-sm-6">
@@ -744,7 +744,7 @@
                                     </div>
                                     <div class="address-info-tabs-box">
                                         <div class="row">
-                                            <div class="col-xs-12 col-lg-6"> <img src="images/NJ_@2x.jpg"> </div>
+                                            <div class="col-xs-12 col-lg-6"> <img src="_images/NJ_@2x.jpg"> </div>
                                             <div class="col-xs-12 col-lg-6">
                                                 <div class="row">
                                                     <div class="col-xs-12 col-sm-6">
@@ -767,7 +767,7 @@
                             </div>
                             <div class="child-box">
                                 <div class="row">
-                                    <div class="col-xs-12 col-lg-6"> <img src="images/SF_@2x.jpg"> </div>
+                                    <div class="col-xs-12 col-lg-6"> <img src="_images/SF_@2x.jpg"> </div>
                                     <div class="col-xs-12 col-lg-6">
                                         <div class="row">
                                             <div class="col-xs-12 col-sm-6">
@@ -790,7 +790,7 @@
                             </div>
                             <div class="child-box">
                                 <div class="row">
-                                    <div class="col-xs-12 col-lg-6"> <img src="images/south_cal.jpeg"> </div>
+                                    <div class="col-xs-12 col-lg-6"> <img src="_images/south_cal.jpeg"> </div>
                                     <div class="col-xs-12 col-lg-6">
                                         <div class="row">
                                             <div class="col-xs-12 col-sm-6">
@@ -809,7 +809,7 @@
                             </div>
                             <div class="child-box">
                                 <div class="row">
-                                    <div class="col-xs-12 col-lg-6"> <img src="images/DC_@2x.jpg"> </div>
+                                    <div class="col-xs-12 col-lg-6"> <img src="_images/DC_@2x.jpg"> </div>
                                     <div class="col-xs-12 col-lg-6">
                                         <div class="row">
                                             <div class="col-xs-12 col-sm-6">
@@ -832,7 +832,7 @@
                             </div>
                             <div class="child-box">
                                 <div class="row">
-                                    <div class="col-xs-12 col-lg-6"> <img src="images/HOUSTIN_@2x.jpg"> </div>
+                                    <div class="col-xs-12 col-lg-6"> <img src="_images/HOUSTIN_@2x.jpg"> </div>
                                     <div class="col-xs-12 col-lg-6">
                                         <div class="row">
                                             <div class="col-xs-12 col-sm-6">
@@ -851,7 +851,7 @@
                             </div>
                             <div class="child-box">
                                 <div class="row">
-                                    <div class="col-xs-12 col-lg-6"> <img src="images/NJ_@2x.jpg"> </div>
+                                    <div class="col-xs-12 col-lg-6"> <img src="_images/NJ_@2x.jpg"> </div>
                                     <div class="col-xs-12 col-lg-6">
                                         <div class="row">
                                             <div class="col-xs-12 col-sm-6">
@@ -920,7 +920,7 @@
                         <div class="footer-top">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-3 fr">
-                                    <div class="footer-logo fr"> <img src="images/AIG-Ch-Logo-footer.png"> </div>
+                                    <div class="footer-logo fr"> <img src="_images/AIG-Ch-Logo-footer.png"> </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-9">
                                     <ul class="footer-menu-list">
