--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="col-xs-3">
                             <div class="logo"> <a href="#"><img src="images/AIG-Ch-Logo.png"></a> </div>
                         </div>
-                        <div class="col-xs-6 ac"> <a class="btn btn-orange-t" data-toggle="modal" data-target="#contact-us-modal">聯繫我們</a> </div>
+                        <div class="col-xs-6 ac"> <a class="btn btn-orange-t" href="https://aigchinese.wufoo.com/embed/zqswkcn0v436lu/">聯繫我們</a> </div>
                         <div class="col-xs-3 ar">
                             <div class="hamburger-menu navbar-link">
                                 <div class="bar"></div>
